fixed layout issue

--- a/src/app/landing-page/landing-page.scss
+++ b/src/app/landing-page/landing-page.scss
@@ -1,10 +1,19 @@
+@import '../../styles.scss';
+
+.landing-page-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100vh;
+}
+
 .landing-page-message-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100dvh;
-  width: 100vw;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .title {
@@ -24,20 +33,21 @@
 }
 
 .custom-arrow-button {
+  margin-bottom: 2rem;
   background-color: transparent;
   color: #fff;
-  border-radius: 33%; // Make it circular
-  width: 10rem; // Set width
-  height: 10rem; // Set height
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); // Add shadow
+  border: 2px solid $main-color;
+  border-radius: 33%;
+  width: 10rem;
+  height: 10rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 
   &:hover {
-    background-color: #0056b3; // Darker background on hover
-    transform: scale(1.1); // Slightly enlarge on hover
+    transform: scale(1.1);
   }
 
   &:active {
-    transform: scale(0.95); // Shrink slightly on click
+    transform: scale(0.95);
   }
 }
