--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 
 // Defining variables
 $background-color: #001211;
+$background-sky-color: #001d2c;
 $main-color: #ffffff;
 
 // Material theme configuration created by running `ng generate @angular/material:theme-color`
